WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164566
IndexedDB 2.0: Clean up some exception ordering
https://bugs.webkit.org/show_bug.cgi?id=164566
Summary
IndexedDB 2.0: Clean up some exception ordering
Brady Eidson
Reported
2016-11-09 16:32:30 PST
IndexedDB 2.0: Clean up some exception ordering IDB 2.0 specifies order-of-precedence for exceptions in ways that IDB 1.0 did not. Let's fix some of that up.
Attachments
Patch
(10.09 KB, patch)
2016-11-09 16:40 PST
,
Brady Eidson
achristensen
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(970.18 KB, application/zip)
2016-11-09 17:39 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(
deleted
)
2016-11-09 17:41 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(1.05 MB, application/zip)
2016-11-09 17:42 PST
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-11-09 16:40:48 PST
Created
attachment 294305
[details]
Patch
Build Bot
Comment 2
2016-11-09 17:39:21 PST
Comment on
attachment 294305
[details]
Patch
Attachment 294305
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2486264
New failing tests: imported/w3c/IndexedDB-private-browsing/idbcursor_advance_index7.html imported/w3c/IndexedDB-private-browsing/idbcursor_continue_index7.html
Build Bot
Comment 3
2016-11-09 17:39:24 PST
Created
attachment 294312
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4
2016-11-09 17:40:56 PST
Comment on
attachment 294305
[details]
Patch
Attachment 294305
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2486209
New failing tests: imported/w3c/IndexedDB-private-browsing/idbcursor_advance_index7.html imported/w3c/IndexedDB-private-browsing/idbcursor_continue_index7.html
Build Bot
Comment 5
2016-11-09 17:41:00 PST
Created
attachment 294313
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 6
2016-11-09 17:42:49 PST
Comment on
attachment 294305
[details]
Patch
Attachment 294305
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2486278
New failing tests: imported/w3c/IndexedDB-private-browsing/idbcursor_advance_index7.html imported/w3c/IndexedDB-private-browsing/idbcursor_continue_index7.html
Build Bot
Comment 7
2016-11-09 17:42:52 PST
Created
attachment 294314
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Brady Eidson
Comment 8
2016-11-09 17:45:53 PST
Whoops, forgot the private copy of the tests. Fixed locally and landed in
https://trac.webkit.org/changeset/208518
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug